vllm multi node serving
vllm multi node serving

Squashed commit of the following:

commit cd6162971d2e5dd9c8d9a22a1ea225bcf853c63e
Author: Simo Lin <simo.lin@oracle.com>
Date:   Sat Aug 10 17:27:53 2024 -0700

    update architecture

commit 8f5ec5dbce192472ddac691a9595fb0cf61c9810
Author: Simo Lin <simo.lin@oracle.com>
Date:   Sat Aug 10 17:22:03 2024 -0700

    upgrade go.opentelemetry.io/otel

commit 86761ccd4210051d8e6048290a6bb4babf8e3fa7
Author: Simo Lin <simo.lin@oracle.com>
Date:   Fri Aug 9 23:44:00 2024 -0700

    multi node reconciliation

commit 3f35740a05fbe43131128c7f5f8b36ae728d002a
Author: Simo Lin <simo.lin@oracle.com>
Date:   Fri Aug 9 14:53:16 2024 -0700

    multi node spec

commit 9a3267e51ba85a16d5b2592917068f760b975b89
Author: Simo Lin <simo.lin@oracle.com>
Date:   Fri Aug 9 13:45:05 2024 -0700

    add ut

commit 19c6c7ef1d21a184b416f78b07c44f9a90997027
Author: Simo Lin <simo.lin@oracle.com>
Date:   Fri Aug 9 09:16:22 2024 -0700

    add ray cluster

commit 92573a45e97d5a8766f69c4283a4c10939fc4430
Author: Simo Lin <simo.lin@oracle.com>
Date:   Fri Aug 9 08:14:52 2024 -0700

    update cluster level model resource path
