# pkg/apis/serving/v1beta1/swagger.json
@@ -1253,6 +1253,20 @@
           "description": "LifeCycle is an enum of Deprecated, Experiment, Public, Internal",
           "type": "string"
         },
+        "nodesFailed": {
+          "type": "array",
+          "items": {
+            "type": "string",
+            "default": ""
+          }
+        },
+        "nodesReady": {
+          "type": "array",
+          "items": {
+            "type": "string",
+            "default": ""
+          }
+        },
         "state": {
           "description": "Status of the model weight",
           "type": "string",
@@ -2261,6 +2275,10 @@
             "type": "string",
             "default": ""
           }
+        },
+        "pipelineParallelism": {
+          "description": "Enable pipeline parallelism for the runtime When pipeline parallelism is enabled, the runtime informs the model server to use pipeline parallelism for model inference with multiple compute nodes via Ray Cluster and vLLM only. The number of compute nodes is determined by the number of replicas in the Inference Service. The worker node will be minimum replica minus one, which is reserved for head node. This is an experimental feature and may not be supported by all runtimes.",
+          "type": "boolean"
         },
         "protocolVersions": {
           "description": "Supported protocol versions (i.e. v1 or v2 or grpc-v1 or grpc-v2)",
